Add two missed Post Build Event in Fix Release build mode

--- a/Client/Launcher/Launcher.vcxproj
+++ b/Client/Launcher/Launcher.vcxproj
@@ -92,6 +92,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>winmm.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy /Y "$(TargetDir)LaunchIVMultiplayer.exe" "$(SolutionDir)Files\LaunchIVMultiplayer.exe"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Libraries\tinyxml\ticpp.cpp" />
