--- a/Client/RAGECoreInjector/RAGECoreInjector.vcxproj
+++ b/Client/RAGECoreInjector/RAGECoreInjector.vcxproj
@@ -84,6 +84,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>winmm.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy /Y "$(TargetDir)IVMultiplayerLaunchInjector.dll" "$(SolutionDir)Files\IVMultiplayerLaunchInjector.dll"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Shared\CString.cpp" />
